<resources>
    <string name="app_name">QK Count</string>

    <string name="action_settings">Settings</string>

    <string name="pref_category_general">General</string>
    <string name="pref_category_vibration">Haptic feedback</string>

    <string name="pref_title_directions">Direction control</string>
    <string name="pref_summary_directions">Display buttons allowing you to toggle increasing or decreasing the count</string>
    <string name="pref_title_volume">Volume controls</string>
    <string name="pref_summary_volume">Count using the volume buttons on your device</string>


    <string name="pref_title_vibration">Haptic feedback</string>
    <string name="pref_summary_vibration">Vibrate the screen when you touch it</string>

    <string name="cd_edit">Edit</string>
    <string name="cd_reset">Reset</string>
    <string name="cd_increase">Increasing mode</string>
    <string name="cd_decrease">Decreasing mode</string>

    <string name="number_bottom_warning">Can\'t go below 0!</string>
    <string name="edit_dialog_title">Set number</string>
</resources>
