<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/pref_category_general">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="directions"
            android:layout="@layout/preference"
            android:summary="@string/pref_summary_directions"
            android:title="@string/pref_title_directions"
            android:widgetLayout="@layout/preference_widget_checkbox" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="volume_controls"
            android:layout="@layout/preference"
            android:summary="@string/pref_summary_volume"
            android:title="@string/pref_title_volume"
            android:widgetLayout="@layout/preference_widget_checkbox" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/pref_category_vibration">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="vibration"
            android:layout="@layout/preference"
            android:summary="@string/pref_summary_vibration"
            android:title="@string/pref_title_vibration"
            android:widgetLayout="@layout/preference_widget_checkbox" />

    </PreferenceCategory>
</PreferenceScreen>